Fix overflow on code block

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -38,6 +38,7 @@ pre code {
   border-radius: .25rem;
   margin-left: 0px;
   margin-right: 0px;
+  overflow-x: auto;
 
   pre {
     margin-bottom: 0;
